--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=q, initial-scale=1.0">
-    <title> Info</title>
+    <title>Bat Info</title>
 </head>
 <body>
 <h1>
-Hello World !!
+Bat info
 </h1>
 </body>
+     <header>
+    <nav>
+        <ul>
+            <li><a href="i.html">coffee</a></li>
+            
+        </ul>
+    </nav>
+    <hr>
+    </header>
     <main>
         <table border="1">
             <thead>
