--- a/coffee.html
+++ b/coffee.html
@@ -105,6 +105,24 @@
                     <td>Feb</td>
                     <td>2023</td>
                     <td style="color: blue;">Mocaha Beans Tuam Rd {Cap}  </td>
+                    <td>Smokies NUIG {Mocha}</td>
+                </tr>
+                
+                <tr>
+                    <td>Wed</td>
+                    <td>7th</td>
+                    <td>Feb</td>
+                    <td>2023</td>
+                    <td>Star Bucks Eyre S {Mocha}  </td>
+                    <td>Smokies NUIG {Mocha}</td>
+                </tr>
+                
+                <tr>
+                    <td>Thurs</td>
+                    <td>8th</td>
+                    <td>Feb</td>
+                    <td>2023</td>
+                    <td>White Mocha Beans {Cap + scone}  </td>
                     <td>X</td>
                 </tr>
 
