--- a/coffee.html
+++ b/coffee.html
@@ -143,6 +143,16 @@
                     <td>Inzombia E Sqaure {Mocha}  </td>
                     <td>X</td>
             </tr>
+                
+              <tr>
+                    <td>Sun</td>
+                    <td>12th</td>
+                    <td>Feb</td>
+                    <td>2023</td>
+                    <td>Inzombia Easons {Cap}  </td>
+                    <td>X</td>
+            </tr>
+
 
 
             </tbody>
