--- a/index.html
+++ b/index.html
@@ -154,9 +154,20 @@
                     <td>2%</td>
                     <td></td>                
                     <td>13 Feb</td> 
+                    <td>P</td>
+                </tr>
+                
+                <tr>
+                    <td>Tue</td>
+                    <td>14 Feb 2023</td>
+                    <td>00:05</td>
+                    <td>8%</td>
+                    <td></td>                
+                    <td>16 Feb</td> 
                     <td>?</td>
                 </tr>
 
+        
 
 
             </tbody>
