--- a/coffee.html
+++ b/coffee.html
@@ -161,6 +161,16 @@
                     <td style="color: blue;">O'Briens Mervue {Cap}  </td>
                     <td>Star bucks NUIG {Mocha}</td>
             </tr>
+                
+            
+             <tr>
+                    <td>Tue</td>
+                    <td>14th</td>
+                    <td>Feb</td>
+                    <td>2023</td>
+                    <td>Coffie accemdy ~ 1st time {Cap} </td>
+                    <td>Star bucks NUIG {Mocha}</td>
+            </tr>
 
 
 
