--- a/coffee.html
+++ b/coffee.html
@@ -169,6 +169,16 @@
                     <td>Feb</td>
                     <td>2023</td>
                     <td>Coffie accemdy ~ 1st time {Cap} </td>
+                    <td>Gloud coffie nuig {Mocha}</td>
+            </tr>
+            
+                
+              <tr>
+                    <td>Wed</td>
+                    <td>15th</td>
+                    <td>Feb</td>
+                    <td>2023</td>
+                    <td>Salthill Mocha beans {Cap + scone} </td>
                     <td>Star bucks NUIG {Mocha}</td>
             </tr>
 
