--- a/coffee.html
+++ b/coffee.html
@@ -181,6 +181,16 @@
                     <td>Salthill Mocha beans {Cap + scone} </td>
                     <td>Star bucks NUIG {Mocha}</td>
             </tr>
+            
+                
+            <tr>
+                    <td>Thur</td>
+                    <td>16th</td>
+                    <td>Feb</td>
+                    <td>2023</td>
+                    <td>train station Star bucks</td>
+                    <td>X</td>
+            </tr>
 
 
 
