--- a/index.html
+++ b/index.html
@@ -175,6 +175,16 @@
                     <td>1%</td>
                     <td>02:30</td>                
                     <td>20 Feb</td> 
+                    <td>P</td>
+                </tr>
+                
+                <tr>
+                    <td>Tue</td>
+                    <td>21 Feb 2023</td>
+                    <td>13:01?</td>
+                    <td>1%</td>
+                    <td>14:30?</td>                
+                    <td>22 Feb</td> 
                     <td>?</td>
                 </tr>
                 
