--- a/coffee.html
+++ b/coffee.html
@@ -262,6 +262,25 @@
                     <td>X</td>
             </tr>
              
+              <tr>
+                    <td>Fri</td>
+                    <td>24th</td>
+                    <td>Feb</td>
+                    <td>2023</td>
+                    <td>Mocha Beans Salthill</td>
+                    <td>X</td>
+            </tr>
+                
+                <tr>
+                    <td>Sat</td>
+                    <td>25th</td>
+                    <td>Feb</td>
+                    <td>2023</td>
+                    <td style="color: green;">NO COFFEE/td>
+                    <td>X</td>
+            </tr>
+
+
 
 
 
