--- a/coffee.html
+++ b/coffee.html
@@ -267,7 +267,7 @@
                     <td>24th</td>
                     <td>Feb</td>
                     <td>2023</td>
-                    <td>Mocha Beans Salthill</td>
+                    <td>Salthill Mocha beans</td>
                     <td>X</td>
             </tr>
                 
