--- a/coffee.html
+++ b/coffee.html
@@ -276,7 +276,7 @@
                     <td>25th</td>
                     <td>Feb</td>
                     <td>2023</td>
-                    <td style="color: green;">NO COFFEE</td>
+                    <td style="color: green;"><strong>NO COFFEE </strong></td>
                     <td>X</td>
             </tr>
             
