--- a/coffee.html
+++ b/coffee.html
@@ -315,7 +315,7 @@
                     <td>Mar</td>
                     <td>2023</td>
                     <td>Urban Grind {Cap + scone}</td>
-                    <td>X</td>
+                    <td>Star bucks NUIG {Mocha}</td>
             </tr>
             
                 
