--- a/coffee.html
+++ b/coffee.html
@@ -329,7 +329,7 @@
             </tr>
             
              <tr>
-                    <td>Fri/td>
+                    <td>Fri</td>
                     <td>3rd</td>
                     <td>Mar</td>
                     <td>2023</td>
@@ -369,7 +369,6 @@
                     <td>X</td>
             </tr>
              
-
 
             </tbody>
         </table>
