--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 
                 
                 <tr>
-                    <td>Tue/td>
+                    <td>Tue</td>
                     <td>7 Mar 2023</td>
                     <td>22:09</td>
                     <td>3%</td>
