--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </tr>
                 
                  <tr>
-                    <td>Sun/td>
+                    <td>Sun</td>
                     <td>5 Mar 2023</td>
                     <td>16:45</td>
                     <td>4%</td>
