--- a/index.html
+++ b/index.html
@@ -247,8 +247,19 @@
                     <td>3%</td>
                     <td>00:30</td>                
                     <td>9 Mar</td> 
+                    <td>P</td>
+                </tr>
+                
+                <tr>
+                    <td>Thu</td>
+                    <td>9 Mar 2023</td>
+                    <td>22:00</td>
+                    <td>7%</td>
+                    <td>00:20</td>                
+                    <td>11 Mar</td> 
                     <td>?</td>
                 </tr>
+                
 
 
 
