--- a/coffee.html
+++ b/coffee.html
@@ -401,7 +401,7 @@
                     <td>10th</td>
                     <td>Mar</td>
                     <td>2023</td>
-                    <td>Salthill Mocha beans<{Cap} </td>
+                    <td>Salthill Mocha beans {Cap}</td>
                     <td>X</td>
             </tr>
                 
