--- a/index.html
+++ b/index.html
@@ -278,6 +278,16 @@
                     <td>?%</td>
                     <td>00:00?</td>                
                     <td>15 Mar</td> 
+                    <td>P</td>
+                </tr>
+                
+                  <tr>
+                    <td>Wed</td>
+                    <td>15 Mar 2023</td>
+                    <td>20:20?</td>
+                    <td>3%</td>
+                    <td>22:40?</td>                
+                    <td>17 Mar</td> 
                     <td>?</td>
                 </tr>
                                 
