--- a/coffee.html
+++ b/coffee.html
@@ -528,7 +528,7 @@
                     <td>23rd</td>
                     <td>Mar</td>
                     <td>2023</td>
-                    <td style="color: blue;">Fat Toneys Tuam Rd {Cap} - 1st Timne </td>
+                    <td style="color: blue;">Fat Toneys Tuam Rd {Cap} - 1st Time </td>
                     <td>X</td>
             </tr>
         
