--- a/coffee.html
+++ b/coffee.html
@@ -442,7 +442,7 @@
                     <td>X</td>
             </tr>
         
-              <tr>
+            <tr>
                     <td>Wed</td>
                     <td>15th</td>
                     <td>Mar</td>
@@ -567,7 +567,7 @@
                     <td>3rd</td>
                     <td>Apr</td>
                     <td>2023</td>
-                    <td style="color: blue;"> WTF </td>
+                    <td style="color: blue;"> Mocaha Beans Tuam Rd {Cap} </td>
                    
                     <td>X</td>
             </tr>
