--- a/c.html
+++ b/c.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=q, initial-scale=1.0">
+    <title>Battery</title>
+</head>
+<body>
+  
+    <main>
+          <table border="1">
+          <thead>
+                <tr>
+                    <th>Day</th>
+                    <th>Date</th>
+                    <th>Time</th>
+                    <th>Put On</th>
+                    <th>Took Off/th>
+                    <th>Expected Next</th>
+                    <td>Pass OR Fail</td>
+                </tr>
+            </thead> 
+            <tbody>
+                <tr>
+                    <td>Mon</td>
+                    <td>15 May 2023</td>
+                    <td>12:33</td>
+                    <td>4 %</td>
+                    <td>!</td>
+                    <td>~</td>
+                    <td>~</td>      
+              </tr>
+             </tbody>
 
+          </table>
+
+    </main>
+
+</body>
+  
