--- a/c.html
+++ b/c.html
@@ -14,9 +14,9 @@
                 <tr>
                     <th>Day</th>
                     <th>Date</th>
-                    <th>Time</th>
-                    <th>Put On</th>
-                    <th>Took Off/th>
+                    <th>Percent Put On</th>
+                    <th>Time ~ Put On</th>
+                    <th>Time ~ Took Off/th>
                     <th>Expected Next</th>
                     <td>Pass OR Fail</td>
                 </tr>
