--- a/c.html
+++ b/c.html
@@ -16,7 +16,7 @@
                     <th>Date</th>
                     <th>Percent Put On</th>
                     <th>Time ~ Put On</th>
-                    <th>Time ~ Took Off/th>
+                    <th>Time ~ Took Off</th>
                     <th>Expected Next</th>
                     <td>Pass OR Fail</td>
                 </tr>
@@ -25,8 +25,8 @@
                 <tr>
                     <td>Mon</td>
                     <td>15 May 2023</td>
-                    <td>12:33</td>
-                    <td>4 %</td>
+                    <td>4%</td>
+                    <td>13:45 ~ ?</td>
                     <td>!</td>
                     <td>~</td>
                     <td>~</td>      
