--- a/coffee.html
+++ b/coffee.html
@@ -887,7 +887,7 @@
             
 
             <tr>
-                    <td>Thu/td>                        
+                    <td>Thu</td>                        
                     <td>18th</td>
                     <td>May</td>                                            
                     <td>2023</td>
