--- a/coffee.html
+++ b/coffee.html
@@ -894,9 +894,45 @@
                     <td>White Mocha Beans {Cap} </td>     
                     <td>X</td>
             </tr>
+
+            <tr>
+                    <td>Fri</td>                        
+                    <td>19th</td>
+                    <td>May</td>                                            
+                    <td>2023</td>
+                    <td>Starbucks{Mocha} ~ E square </td>     
+                    <td>X</td>
+            </tr>
+
+             <tr>
+                    <td>Sat</td>                        
+                    <td>20th</td>
+                    <td>May</td>                                            
+                    <td>2023</td>
+                    <td>Gourmet tart{Cap} ~ Salthill </td>     
+                    <td>X</td>
+            </tr>
+
+            <tr>
+                    <td>Sun</td>                        
+                    <td>21st</td>
+                    <td>May</td>                                            
+                    <td>2023</td>
+                    <td>Mocha Beans{Mocha} ~ Salthill </td>     
+                    <td>X</td>
+            </tr>
+
+             <tr>
+                    <td>Mon</td>                        
+                    <td>22nd</td>
+                    <td>May</td>                                            
+                    <td>2023</td>
+                    <td style="color: blue;">O'Briens {Cap + scone} ~ Mervue </td></td>   
+                    <td>X</td>
+            </tr>
     
      
-            </tbody>
+       </tbody>
         </table>
     <section>
         <hr>
