--- a/coffee.html
+++ b/coffee.html
@@ -959,11 +959,13 @@
         </h3>       
         <ul>
             <li>Costa --> Eyre Square</li>
+            <li>Cafe Nero -->  Eyre Square </li>
             <li>Insomnia --> Eyre Square </li>
             <li>Insomnia --> Easons </li>
             <li>Mocha Beans --> Salthill</li>
             <li>Mocha Beans --> White Newcastle</li>
             <li>Mocha Beans --> Black Newcastle</li>
+            <li>Mocha Beans --> Tuam Rd</li>
             
             </ul>   
     </section> 
