--- a/coffee.html
+++ b/coffee.html
@@ -945,7 +945,7 @@
                     <td>24th</td>
                     <td>May</td>                                            
                     <td>2023</td>
-                    <td>Cota {Mocha} ~ E Square </td>     
+                    <td>Costa {Mocha} ~ E Square </td>     
                     <td>X</td>
             </tr>
 
