--- a/coffee.html
+++ b/coffee.html
@@ -958,6 +958,24 @@
                     <td>X</td>
              </tr>
 
+            <tr>
+                    <td>Fri</td>                        
+                    <td>26th</td>
+                    <td>May</td>                                            
+                    <td>2023</td>
+                    <td>Mocha Beans {Cap} ~ Salthill </td>     
+                    <td>X</td>
+             </tr>
+
+             <tr>
+                    <td>Sat</td>                        
+                    <td>27th</td>
+                    <td>May</td>                                            
+                    <td>2023</td>
+                    <td>MCafe Nero {Mocha} ~  E Square </td>     
+                    <td>X</td>
+             </tr>
+
 
     
      
