--- a/coffee.html
+++ b/coffee.html
@@ -927,7 +927,7 @@
                     <td>22nd</td>
                     <td>May</td>                                            
                     <td>2023</td>
-                    <td style="color: blue;">O'Briens {Cap + scone} ~ Mervue </td></td>   
+                    <td style="color: blue;">O'Briens {Cap + scone} ~ Mervue </td>
                     <td>X</td>
             </tr>
 
@@ -975,6 +975,25 @@
                     <td>MCafe Nero {Mocha} ~  E Square </td>     
                     <td>X</td>
              </tr>
+
+            <tr>
+                    <td>Sun</td>                        
+                    <td>28th</td>
+                    <td>May</td>                                            
+                    <td>2023</td>
+                    <td>Insomnia {Cap}  ~  E Square </td>     
+                    <td>X</td>
+             </tr>
+
+             <tr>
+                    <td>Mon</td>                        
+                    <td>29th</td>
+                    <td>May</td>                                            
+                    <td>2023</td>
+                    <td style="color: blue;">O'Briens {Cap + scone} ~ Tuam Rd </td>  
+                    <td>X</td>
+             </tr>
+
 
 
     
