--- a/coffee.html
+++ b/coffee.html
@@ -973,7 +973,7 @@
                     <td>May</td>                                            
                     <td>2023</td>
                     <td>MCafe Nero {Mocha} ~  E Square </td>     
-                    <td>X</td>
+                    <td>Starbucks{Ice Tea} ~ E Square </td>
              </tr>
 
             <tr>
