--- a/coffee.html
+++ b/coffee.html
@@ -1020,6 +1020,8 @@
         <ul>
             <li>Costa --> Eyre Square</li>
             <li>Cafe Nero -->  Eyre Square </li>
+            <li>The Ligthouse</li>
+            <li>Little Lane</li>
             <li>Insomnia --> Eyre Square </li>
             <li>Insomnia --> Easons </li>
             <li>Mocha Beans --> Salthill</li>
