--- a/coffee.html
+++ b/coffee.html
@@ -1000,9 +1000,19 @@
                     <td>30th</td>
                     <td>May</td>                                            
                     <td>2023</td>
-                    <td>The Lighthouse </td>
+                    <td>The Lighthouse {Cap + Scone} </td>
+                    <td>Wards {Iceed Mocha}</td>
+             </tr>
+
+            <tr>
+                    <td>Wed</td>                        
+                    <td>31st</td>
+                    <td>May</td>                                            
+                    <td>2023</td>
+                    <td>White Mocha Beans {Cap + Scone} </td>
                     <td>X</td>
              </tr>
+
 
 
 
