--- a/c.html
+++ b/c.html
@@ -110,6 +110,16 @@
                     <td>12:52</td>
                     <td>19:29</td>
                     <td>01 June</td>
+                    <td>P</td>      
+                 </tr>
+                
+                 <tr>
+                    <td>Thu</td>
+                    <td>01 June 2023</td>
+                    <td>8%</td>
+                    <td>16:05</td>
+                    <td>19:13</td>
+                    <td>03 June</td>
                     <td>!</td>      
                  </tr>
                 
