--- a/coffee.html
+++ b/coffee.html
@@ -1013,10 +1013,14 @@
                     <td>X</td>
              </tr>
 
-
-
-
-
+               <tr>
+                    <td>Thu</td>                        
+                    <td>01st</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Esquires {Cap + Pacake} </td>
+                    <td>X</td>
+             </tr>
 
     
      
@@ -1032,6 +1036,7 @@
             <li>Cafe Nero -->  Eyre Square </li>
             <li>The Ligthouse</li>
             <li>Little Lane</li>
+            <li>Esquires Coffie  -->  Eyre Square  </li>
             <li>Insomnia --> Eyre Square </li>
             <li>Insomnia --> Easons </li>
             <li>Mocha Beans --> Salthill</li>
