--- a/coffee.html
+++ b/coffee.html
@@ -1001,7 +1001,7 @@
                     <td>May</td>                                            
                     <td>2023</td>
                     <td>The Lighthouse {Cap + Scone} </td>
-                    <td>Wards {Iceed Mocha}</td>
+                    <td>Wards {Iced Mocha}</td>
              </tr>
 
             <tr>
@@ -1019,7 +1019,7 @@
                     <td>June</td>                                            
                     <td>2023</td>
                     <td>Esquires {Cap + Pacake} </td>
-                    <td>X</td>
+                    <td>Wards {Iced Tea}</td>
              </tr>
 
     
