--- a/coffee.html
+++ b/coffee.html
@@ -1019,7 +1019,7 @@
                     <td>June</td>                                            
                     <td>2023</td>
                     <td>Esquires {Cap + Pacake} </td>
-                    <td>Wards {Iced Tea}</td>
+                    <td>Wards {Ice Tea}</td>
              </tr>
 
     
