--- a/coffee.html
+++ b/coffee.html
@@ -1022,6 +1022,15 @@
                     <td>Wards {Ice Tea}</td>
              </tr>
 
+            <tr>
+                    <td>Fri</td>                        
+                    <td>02nd</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>The Secret Garden {Cap} </td>
+                    <td>X</td>
+             </tr>
+
     
      
        </tbody>
@@ -1036,6 +1045,7 @@
             <li>Cafe Nero -->  Eyre Square </li>
             <li>The Ligthouse</li>
             <li>Little Lane</li>
+            <li>The Secret Garden --> William St </li>
             <li>Esquires Coffie  -->  Eyre Square  </li>
             <li>Insomnia --> Eyre Square </li>
             <li>Insomnia --> Easons </li>
