--- a/coffee.html
+++ b/coffee.html
@@ -40,7 +40,7 @@
                     <td>30th</td>
                     <td>Jan</td>
                     <td>2023</td>
-                    <td>Cross St Mocha <strong>-WO-</strong></td>
+                    <td>Cross St Mocha <strong>-WO-</strong> <i>2nd Feb 2024</i> </td>
                     <td>Urban Grind {Cap + scone}</td>
                 </tr>
                 <tr>
