--- a/coffee.html
+++ b/coffee.html
@@ -1043,10 +1043,13 @@
         <ul>
             <li>Costa --> Eyre Square</li>
             <li>Cafe Nero -->  Eyre Square </li>
-            <li>The Ligthouse</li>
-            <li>Little Lane</li>
+            <li>The Ligthouse --> Abbeygate Street  </li>
+            <li>Little Lane --> Abbeygate Street   </li>
             <li>The Secret Garden --> William St </li>
+            <li>Merchant Cafe --> Forster St </li>
+            <li>Top Shelf --> Fairgreen Rd </li>
             <li>Esquires Coffie  -->  Eyre Square  </li>
+            <li>WYLDE --> Forster St </li>
             <li>Insomnia --> Eyre Square </li>
             <li>Insomnia --> Easons </li>
             <li>Mocha Beans --> Salthill</li>
