--- a/coffee.html
+++ b/coffee.html
@@ -1031,6 +1031,27 @@
                     <td>X</td>
              </tr>
 
+             <tr>
+                    <td>Sat</td>                        
+                    <td>03rd</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Mocha Beans {Cap} ~ Salthill </td>
+                    <td>X</td>
+             </tr>
+
+             <tr>
+                    <td>Sun</td>                        
+                    <td>04th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Gourmet tart{Cap} ~ Salthill </td>
+                    <td>Starbucks {Lemon Ice tea} ~ E Square </td>
+             </tr>
+
+
+
+
     
      
        </tbody>
@@ -1050,6 +1071,8 @@
             <li>Top Shelf --> Fairgreen Rd </li>
             <li>Esquires Coffie  -->  Eyre Square  </li>
             <li>WYLDE --> Forster St </li>
+            <li>Starbucks ~ Eyre Square</li>
+            <li>Starbucks ~ train station</li>
             <li>Insomnia --> Eyre Square </li>
             <li>Insomnia --> Easons </li>
             <li>Mocha Beans --> Salthill</li>
