--- a/coffee.html
+++ b/coffee.html
@@ -1049,6 +1049,15 @@
                     <td>Starbucks {Lemon Ice tea} ~ E Square </td>
              </tr>
 
+            <tr>
+                    <td>Mon</td>                        
+                    <td>05th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Cafe Nero{Mocha} ~ E Square </td>
+                    <td>X</td>
+             </tr>
+
 
 
 
