Update and rename c.html to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Battery</title>
 </head>
 <body>
+   
+    <nav>
+        <ol>
+            <li><a href="i.html">Old Battery Page </a> </li>
+            <li> <a href="coffee.html"> The Coffee Page </a> </li>
+        </ol>
+    </nav>
   
     <main>
           <table border="1">
