--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    
     <nav>
         <ol>
-            <li><a href="i.html">Old Battery Page </a> </li>
+            <li><a href="oldbat.html">Old Battery Page </a> </li>
             <li> <a href="coffee.html"> The Coffee Page </a> </li>
         </ol>
     </nav>
