--- a/coffee.html
+++ b/coffee.html
@@ -1058,6 +1058,16 @@
                     <td>X</td>
              </tr>
 
+             <tr>
+                    <td>Tue</td>                        
+                    <td>06th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td style="color: blue;">Mocha Beans {Ca} ~ Tuam Rd </td> 
+                    <td>X</td>
+             </tr>
+
+
      
        </tbody>
         </table>
