--- a/coffee.html
+++ b/coffee.html
@@ -1067,6 +1067,25 @@
                     <td>X</td>
              </tr>
 
+             <tr>
+                    <td>Wed</td>                        
+                    <td>07th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Merchant Cafe {Cap} ~ E Square </td>
+                    <td>X</td> 
+             </tr>
+
+             <tr>
+                    <td>Thu</td>                        
+                    <td>08th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Renzo {Cap + scone} ~ E Square </td>
+                    <td>X</td> 
+             </tr>
+
+
 
      
        </tbody>
@@ -1081,6 +1100,7 @@
             <li>Cafe Nero -->  Eyre Square </li>
             <li>The Ligthouse --> Abbeygate Street  </li>
             <li>Little Lane --> Abbeygate Street   </li>
+            <li>Renzo --> Eyre St </li>
             <li>The Secret Garden --> William St </li>
             <li>Merchant Cafe --> Forster St </li>
             <li>Top Shelf --> Fairgreen Rd </li>
