--- a/coffee.html
+++ b/coffee.html
@@ -1085,6 +1085,45 @@
                     <td>X</td> 
              </tr>
 
+             <tr>
+                    <td>Fri</td>                        
+                    <td>09th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Costa {Moc} E Square </td>
+                    <td>X</td> 
+             </tr>
+
+             <tr>
+                    <td>Sat</td>                        
+                    <td>10th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Mocha Beans {Cap} ~ Salthill </td>
+                    <td>X</td> 
+             </tr>
+
+
+             <tr>
+                    <td>Sun</td>                        
+                    <td>11th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td style="color: green;"><strong>NO COFFEE </strong></td>
+                    <td>X</td> 
+             </tr>
+
+              <tr>
+                    <td>Mon</td>                        
+                    <td>12th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Cafe Nero{Mocha} ~ E Square </td>    
+                    <td>X</td> 
+             </tr>
+
+
+
 
 
      
