--- a/coffee.html
+++ b/coffee.html
@@ -1122,6 +1122,15 @@
                     <td>X</td> 
              </tr>
 
+            <tr>
+                    <td>Tue</td>                        
+                    <td>13th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>White Mocha Beans{Cap + scone}</td>    
+                    <td>X</td> 
+             </tr>
+
 
 
 
