--- a/coffee.html
+++ b/coffee.html
@@ -1131,8 +1131,14 @@
                     <td>X</td> 
              </tr>
 
-
-
+             <tr>
+                    <td>Wed</td>                        
+                    <td>14th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Urban Grind{Cap + scone}</td>    
+                    <td>X</td> 
+             </tr>
 
 
      
