--- a/oldbat.html
+++ b/oldbat.html
@@ -10,7 +10,7 @@
     <header>
     <nav>
         <ul>
-            <li><a href="c.html">New Batt</a></li>
+            <li><a href="index.html">New Batt</a></li>
             
             <li><a href="coffee.html">Coffee</a></li>
             
