--- a/coffee.html
+++ b/coffee.html
@@ -1140,6 +1140,16 @@
                     <td>X</td> 
              </tr>
 
+             <tr>
+                    <td>Thu</td>                        
+                    <td>15th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Mr Waffle {Ca}</td>    
+                    <td>X</td> 
+             </tr>
+
+
 
      
        </tbody>
