--- a/coffee.html
+++ b/coffee.html
@@ -1145,7 +1145,16 @@
                     <td>15th</td>
                     <td>June</td>                                            
                     <td>2023</td>
-                    <td>Mr Waffle {Ca}</td>    
+                    <td>Mr Waffle {Cap}</td>    
+                    <td>X</td> 
+             </tr>
+
+            <tr>
+                    <td>Fri</td>                        
+                    <td>16th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Costa {Cap}</td>    
                     <td>X</td> 
              </tr>
 
