--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul>
             <li><a href="oldbat.html">Old Battery Page </a> </li>
             <li> <a href="coffee.html"> The Coffee Page </a> </li>
+            <li><a href="PC.html">PC</a></li>
         </ul>
     </nav>
   
