--- a/PC.html
+++ b/PC.html
@@ -7,6 +7,11 @@
     <title>Battery</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+        </ul>
+    </nav>
   
   <h1>Hello World!</h1>
   
