--- a/PC.html
+++ b/PC.html
@@ -7,13 +7,22 @@
     <title>Battery</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+         <h1>Hello World!</h1>
+    </header>
+    <main>
+        <table>
+
+            
+        </table>
   
-  <h1>Hello World!</h1>
+     
+    </main>
   
   
   
