--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
                  <tr>
                     <td>Fri</td>
-                    <td>16 June 2023 ?</td>
+                    <td>16 June 2023 </td>
                     <td>2% </td>
                     <td>22:24</td>
                     <td></td>
