--- a/PC.html
+++ b/PC.html
@@ -16,7 +16,28 @@
          <h1>Hello World!</h1>
     </header>
     <main>
-        <table>
+        <table border="1">
+          <thead>
+                <tr>
+                    <th>To Year</th>
+                    <th>From Year</th>
+                    <th>Age</th>
+                    <th>Work</th>   
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2007</td>
+                    <td>2008</td>
+                    <td>15</td>
+                    <td>J Cert</td>
+                </tr>
+
+
+                
+            </tbody>
+
+
 
             
         </table>
