--- a/PC.html
+++ b/PC.html
@@ -20,8 +20,8 @@
         <table border="1">
           <thead>
                 <tr>
-                    <th>To Year</th>
-                    <th>From Year</th>
+                    <th>L Year</th>
+                    <th>P Year</th>
                     <th>Age</th>
                     <th>Work</th>   
                 </tr>
