--- a/PC.html
+++ b/PC.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
-         <h1>Hello World!</h1>
+         <h1>Petter Conneely</h1>
     </header>
     <main>
         <table border="1">
