--- a/PC.html
+++ b/PC.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
-         <h1>Petter Conneely</h1>
+         <h1>Peter Conneely</h1>
         <h3>01 - 02 - 1993</h3>
     </header>
     <main>
