--- a/coffee.html
+++ b/coffee.html
@@ -1154,7 +1154,16 @@
                     <td>16th</td>
                     <td>June</td>                                            
                     <td>2023</td>
-                    <td>Costa {Cap}</td>    
+                    <td>Costa {Cap} ~ E Square  </td>    
+                    <td>X</td> 
+             </tr>
+
+            <tr>
+                    <td>Sat</td>                        
+                    <td>17th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                   <td style="color: green;"><strong>NO COFFEE </strong></td>
                     <td>X</td> 
              </tr>
 
