--- a/coffee.html
+++ b/coffee.html
@@ -1168,6 +1168,16 @@
              </tr>
 
 
+            <tr>
+                    <td>Sun</td>                        
+                    <td>18th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Insomnia ~ E Square </td>
+                    <td>Starbucks {Lemon Ice tea} ~ E Square </td>
+             </tr>
+
+
 
      
        </tbody>
