--- a/coffee.html
+++ b/coffee.html
@@ -1177,6 +1177,15 @@
                     <td>Starbucks {Lemon Ice tea} ~ E Square </td>
              </tr>
 
+            <tr>
+                    <td>Monn</td>                        
+                    <td>19th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td style="color: blue;">O'Briens {Cap + scone} ~ Tuam Rd </td>  </td>
+                    <td>X</td>
+             </tr>
+
 
 
      
