--- a/coffee.html
+++ b/coffee.html
@@ -1178,12 +1178,21 @@
              </tr>
 
             <tr>
-                    <td>Monn</td>                        
+                    <td>Mon</td>                        
                     <td>19th</td>
                     <td>June</td>                                            
                     <td>2023</td>
                     <td style="color: blue;">O'Briens {Cap + scone} ~ Tuam Rd </td>  </td>
                     <td>X</td>
+             </tr>
+
+             <tr>
+                    <td>Tue</td>                        
+                    <td>20th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Insomnia ~ E Square </td>
+                    <td>GBC {Cap} ~ E Square</td>
              </tr>
 
 
