--- a/coffee.html
+++ b/coffee.html
@@ -1195,6 +1195,28 @@
                     <td>GBC {Cap} ~ E Square</td>
              </tr>
 
+            <tr>
+                    <td>Wed</td>                        
+                    <td>21st</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Cafe Nero ~ {Mocha} </td>
+                    <td>X</td>
+             </tr>
+
+             <tr>
+                    <td>Thu</td>                        
+                    <td>22nd</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td> Black Mocha Beans{Cap} </td>
+                    <td>Ice Tea smokies</td>
+             </tr>
+
+           
+
+
+
 
 
      
