--- a/index.html
+++ b/index.html
@@ -202,8 +202,18 @@
                     <td>19 June 2023 </td>
                     <td>4% </td>
                     <td>13:32</td>
-                    <td></td>
+                    <td>19:30?</td>
                     <td>21 June</td>
+                    <td>F - Charging phone</td>       
+                 </tr>
+
+                <tr>
+                    <td>Tue</td>
+                    <td>20 June 2023 </td>
+                    <td>0% </td>
+                    <td>21:25 ?</td>
+                    <td>02:30?</td>
+                    <td>22 June</td>
                     <td>!</td>       
                  </tr>
                 
