--- a/index.html
+++ b/index.html
@@ -214,6 +214,17 @@
                     <td>21:25 ?</td>
                     <td>02:30?</td>
                     <td>22 June</td>
+                    <td>P</td>       
+                 </tr>
+
+
+                 <tr>
+                    <td>Fri</td>
+                    <td>23 June 2023 </td>
+                    <td>2% </td>
+                    <td>17:11</td>
+                    <td></td>
+                    <td>25 June</td>
                     <td>!</td>       
                  </tr>
                 
