--- a/coffee.html
+++ b/coffee.html
@@ -1213,10 +1213,16 @@
                     <td>Ice Tea smokies</td>
              </tr>
 
+             <tr>
+                    <td>Fri</td>                        
+                    <td>23rd</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                     <td>Starbucks {Mocha} ~ E Square </td>
+                    <td>X</td>
+             </tr>
+
            
-
-
-
 
 
      
