--- a/coffee.html
+++ b/coffee.html
@@ -1222,6 +1222,35 @@
                     <td>X</td>
              </tr>
 
+            <tr>
+                    <td>Sat</td>                        
+                    <td>24th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                     <td>Mocha Beans {Cap} ~ Salt </td>
+                    <td>X</td>
+             </tr>
+
+            <tr>
+                    <td>Sun</td>                        
+                    <td>25th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>gourmet tart {Cap} ~ Claddagh </td>
+                    <td>X</td>
+             </tr>
+
+             <tr>
+                    <td>Monn</td>                        
+                    <td>26th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>gourmet tart {Cap} ~ Newcastle </td>
+                    <td>X</td>
+             </tr>
+
+
+
            
 
 
