--- a/coffee.html
+++ b/coffee.html
@@ -1241,13 +1241,33 @@
              </tr>
 
              <tr>
-                    <td>Monn</td>                        
+                    <td>Mon</td>                        
                     <td>26th</td>
                     <td>June</td>                                            
                     <td>2023</td>
                     <td>gourmet tart {Cap} ~ Newcastle </td>
                     <td>X</td>
              </tr>
+
+            <tr>
+                    <td>Tue</td>                        
+                    <td>27th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Smokies ~ NUIG {Cap} </td>
+                    <td>X</td>
+             </tr>
+
+             <tr>
+                    <td>Wed</td>                        
+                    <td>28th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Insomnia ~ E Square {Cap} </td>
+                    <td>X</td>
+             </tr>
+
+
 
 
 
