--- a/index.html
+++ b/index.html
@@ -235,6 +235,16 @@
                     <td>20:16</td>
                     <td>02:30</td>
                     <td>27 June</td>
+                    <td>P</td>       
+                 </tr>
+
+                 <tr>
+                    <td>Tue</td>
+                    <td>27 June 2023 </td>
+                    <td>3% </td>
+                    <td>23:25</td>
+                    <td>02:30 ~ 100% </td>
+                    <td>29 June</td>
                     <td>!</td>       
                  </tr>
                 
