--- a/coffee.html
+++ b/coffee.html
@@ -1267,6 +1267,26 @@
                     <td>X</td>
              </tr>
 
+               <tr>
+                    <td>Thu</td></td>                        
+                    <td>29th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>White Mocha Beans  {Cap} </td>
+                    <td>X</td>
+             </tr>
+
+             <tr>
+                    <td>Fri</td></td>                        
+                    <td>30th</td>
+                    <td>June</td>                                            
+                    <td>2023</td>
+                    <td>Mocha Beans ~ Salthill {Cap} </td>
+                    <td>X</td>
+             </tr>
+
+
+
 
 
 
